--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
   <title>Carolina Spa</title>
 </head>
 <body>
-
+  <header class="cabecera-sitio container">
+    <div class="row justify-content-md-between">
+      <div class="col-lg-4">
+        <a href="index.html"><img src="images/logo.svg" alt="" class="img-fluid mx-auto d-block"></a>
+      </div>
+      <div class="col-lg-4">
+        <nav class="sociales">
+          <ul>
+            <li><a href="#"><span class="sr-only"> Facebook</span></a></li>
+            <li><a href="#"><span class="sr-only"> Twitter</span></a></li>
+            <li><a href="#"><span class="sr-only"> Instagram</span></a></li>
+            <li><a href="#"><span class="sr-only"> Pinterest</span></a></li>
+            <li><a href="#"><span class="sr-only"> YouTube</span></a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
