--- a/index.html
+++ b/index.html
@@ -10,23 +10,79 @@
 </head>
 <body>
   <header class="cabecera-sitio container">
-    <div class="row justify-content-md-between">
+    <div class="row justify-content-md-between align-items-center">
       <div class="col-lg-4">
-        <a href="index.html"><img src="images/logo.svg" alt="" class="img-fluid mx-auto d-block"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="" class="img-fluid mx-auto d-block pt-4 pb-4"></a>
       </div>
       <div class="col-lg-4">
-        <nav class="sociales">
-          <ul>
-            <li><a href="#"><span class="sr-only"> Facebook</span></a></li>
-            <li><a href="#"><span class="sr-only"> Twitter</span></a></li>
-            <li><a href="#"><span class="sr-only"> Instagram</span></a></li>
-            <li><a href="#"><span class="sr-only"> Pinterest</span></a></li>
-            <li><a href="#"><span class="sr-only"> YouTube</span></a></li>
+        <nav class="sociales text-center text-lg-right">
+          <ul class="m-0 p-0">
+            <li><a href="https://facebook.com"><span class="sr-only"> Facebook</span></a></li>
+            <li><a href="https://twitter.com"><span class="sr-only"> Twitter</span></a></li>
+            <li><a href="https://instagram.com"><span class="sr-only"> Instagram</span></a></li>
+            <li><a href="https://pinterest.com"><span class="sr-only"> Pinterest</span></a></li>
+            <li><a href="https://youtube.com"><span class="sr-only"> YouTube</span></a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
+  <div class="navegacion">
+    <nav class="nav-principal navbar navbar-expand-md navbar-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav_principal" aria-label="Mostrar Navegación">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a href="#" class="navbar-brand d-lg-none">Carolina Spa</a>
+      <div class="container">
+        <div class="collapse navbar-collapse w-100" id="nav_principal">
+          <ul class="nav nav-justified w-100 flex-column flex-sm-row">
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Inicio</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Nosotros</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Servicios</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Productos</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container">
+    <div id="slider-principal" class="carousel slide mt-4" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#slider-principal" data-slide-to="0" class="active"></li>
+        <li data-target="#slider-principal" data-slide-to="1"></li>
+        <li data-target="#slider-principal" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img src="images/slide_01.jpg" alt="Nuestras instalaciones">
+          <div class="carousel-caption">
+            <h3 class="text-uppercase">Nuevas instalaciones</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/slide_02.jpg" alt="Conoce nuestros servicios">
+          <div class="carousel-caption">
+            <h3 class="text-uppercase">Conoce nuestros servicios</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/slide_03.jpg" alt="Nuestro sitio web, 2x1 en todos los servicios">
+          <div class="carousel-caption">
+            <h3 class="text-uppercase">Nuestro sitio web, 2x1 en todos los servicios</h3>
+          </div>
+        </div>
+      </div>
+      <a href="#slider-principal" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a href="#slider-principal" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Siguiente</span>
+      </a>
+    </div>
+  </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
