--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italianno|Lato:400,700,900|Raleway:400,700,900">
+  <link rel="stylesheet" href="css/fontawesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Carolina Spa</title>
@@ -27,7 +28,7 @@
       </div>
     </div>
   </header>
-  <div class="navegacion">
+  <div class="navegacion mt-3 py-1">
     <nav class="nav-principal navbar navbar-expand-md navbar-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav_principal" aria-label="Mostrar Navegación">
         <span class="navbar-toggler-icon"></span>
@@ -81,6 +82,47 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Siguiente</span>
       </a>
+    </div>
+  </div>
+  <section class="nuevo-sitio text-center py-5">
+    <h1 class="text-uppercase mt-4 cabecera-sitio"><span class="text-lowercase d-block">bienvenido a nuestro </span>sitio web</h1>
+    <p class="mt-4">Te sentirás como nuevo(a) con nuestros <br>masajistas profesionales</p>
+  </section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <div class="imagen-servicio">
+          <img src="images/servicio_01.jpg" class="img-fluid">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-md-10 pt-4 servicio-info">
+              <h2 class="text-center text-uppercase cabecera-sitio"><span class="text-lowercase d-block">Conoce sobre</span> nosotros</h2>
+              <a href="#" class="btn btn-primary btn-block text-uppercase mt-4 py-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="imagen-servicio">
+          <img src="images/servicio_02.jpg" class="img-fluid">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-md-10 pt-4 servicio-info">
+              <h2 class="text-center text-uppercase cabecera-sitio"><span class="text-lowercase d-block">Nuestros</span> servicios</h2>
+              <a href="#" class="btn btn-primary btn-block text-uppercase mt-4 py-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="imagen-servicio">
+          <img src="images/servicio_03.jpg" class="img-fluid">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-md-10 pt-4 servicio-info">
+              <h2 class="text-center text-uppercase cabecera-sitio"><span class="text-lowercase d-block">Visita nuestra</span> tienda</h2>
+              <a href="#" class="btn btn-primary btn-block text-uppercase mt-4 py-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script src="js/jquery-3.3.1.min.js"></script>
