Se agrega la sección de horario

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     <h1 class="text-uppercase mt-4 cabecera-sitio"><span class="text-lowercase d-block">bienvenido a nuestro </span>sitio web</h1>
     <p class="mt-4">Te sentirás como nuevo(a) con nuestros <br>masajistas profesionales</p>
   </section>
-  <div class="container">
+  <div class="container mb-5">
     <div class="row">
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 text-center mb-4">
         <div class="imagen-servicio">
           <img src="images/servicio_01.jpg" class="img-fluid">
           <div class="row no-gutters justify-content-center">
@@ -101,7 +101,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 text-center mb-4">
         <div class="imagen-servicio">
           <img src="images/servicio_02.jpg" class="img-fluid">
           <div class="row no-gutters justify-content-center">
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 text-center mb-4">
         <div class="imagen-servicio">
           <img src="images/servicio_03.jpg" class="img-fluid">
           <div class="row no-gutters justify-content-center">
@@ -121,6 +121,65 @@
               <a href="#" class="btn btn-primary btn-block text-uppercase mt-4 py-3">Leer más</a>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="horario text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 p-4">
+          <h2 class="text-center text-uppercase mt-5">Horarios</h2>
+          <p class="text-center mt-5 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis rerum odit est sed, aliquid, cumque placeat nam officia maiores similique iusto in, laborum! Ipsam excepturi velit fuga modi omnis cupiditate sequi atque consequuntur adipisci ad.</p>
+          <table class="table table-hover text-center mt-3">
+            <thead>
+              <tr>
+                <th class="text-center">Día</th>
+                <th class="text-center">De</th>
+                <th class="text-center">Hasta</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lunes</td>
+                <td>09:00</td>
+                <td>19:00</td>
+              </tr>
+              <tr>
+                <td>Martes</td>
+                <td>09:00</td>
+                <td>19:00</td>
+              </tr>
+              <tr>
+                <td>Miércoles</td>
+                <td>09:00</td>
+                <td>19:00</td>
+              </tr>
+              <tr>
+                <td>Jueves</td>
+                <td>09:00</td>
+                <td>19:00</td>
+              </tr>
+              <tr>
+                <td>Viernes</td>
+                <td>09:00</td>
+                <td>19:00</td>
+              </tr>
+              <tr>
+                <td>Sábado</td>
+                <td>10:00</td>
+                <td>14:00</td>
+              </tr>
+              <tr>
+                <td>Domingo</td>
+                <td>Cerrado</td>
+                <td>Cerrado</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-6 bg-horario">
+
         </div>
       </div>
     </div>
