Se finaliza la página principal y se crea una nueva plantilla

--- a/index.html
+++ b/index.html
@@ -178,12 +178,104 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-6 bg-horario">
-
-        </div>
+        <div class="col-md-6 bg-horario"></div>
       </div>
     </div>
   </div>
+  <section class="productos container py-5">
+    <h2 class="cabecera-sitio text-center text-uppercase mt-4"><span>nuestros</span> productos</h2>
+    <div class="row py-5">
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <a href="#">
+            <img src="images/producto_mini_01.jpg" class="card-img-top">
+            <div class="card-body">
+              <h3 class="card-title text-center text-uppercase">Producto 1</h3>
+              <p class="card-text text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p class="precio mb-0 lead text-center">$25</p>
+            </div>
+            </a>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <a href="#">
+            <img src="images/producto_mini_02.jpg" class="card-img-top">
+            <div class="card-body">
+              <h3 class="card-title text-center text-uppercase">Producto 1</h3>
+              <p class="card-text text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p class="precio mb-0 lead text-center">$25</p>
+            </div>
+            </a>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <a href="#">
+            <img src="images/producto_mini_03.jpg" class="card-img-top">
+            <div class="card-body">
+              <h3 class="card-title text-center text-uppercase">Producto 1</h3>
+              <p class="card-text text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p class="precio mb-0 lead text-center">$25</p>
+            </div>
+            </a>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <a href="#">
+            <img src="images/producto_mini_04.jpg" class="card-img-top">
+            <div class="card-body">
+              <h3 class="card-title text-center text-uppercase">Producto 1</h3>
+              <p class="card-text text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p class="precio mb-0 lead text-center">$25</p>
+            </div>
+            </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="citas container-fluid text-light py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6 text-center">
+        <h3 class="text-uppercase">Realiza una cita</h3>
+        <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem placeat tempora, quaerat praesentium provident voluptatum maxime nobis distinctio, aspernatur id omnis soluta perspiciatis hic doloribus dolorem magnam illum, repellendus consequatur.</p>
+        <a href="#" class="btn btn-primary text-uppercase mt-3">Leer más</a>
+      </div>
+    </div>
+  </div>
+  <footer class="footer-sitio pt-3 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3 class="text-uppercase text-center pb-4">Nosotros</h3>
+          <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum impedit debitis fugit, tenetur nesciunt ducimus, et optio fugiat quas iusto odio. Quae, architecto, quo.</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <h3 class="text-uppercase pb-4">Horario</h3>
+          <p>Lun-Vie: 9 AM - 7PM</p>
+          <p>Sábado: 10 AM - 2PM</p>
+          <p>Domingo: Cerrado</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <h3 class="text-uppercase pb-4">Contácto</h3>
+          <p>66 East Sunnyslope Avenue</p>
+          <p>Lansdowne, PA 19050</p>
+          <nav class="sociales text-center">
+            <ul class="m-0 p-0">
+              <li><a href="https://facebook.com"><span class="sr-only"> Facebook</span></a></li>
+              <li><a href="https://twitter.com"><span class="sr-only"> Twitter</span></a></li>
+              <li><a href="https://instagram.com"><span class="sr-only"> Instagram</span></a></li>
+              <li><a href="https://pinterest.com"><span class="sr-only"> Pinterest</span></a></li>
+              <li><a href="https://youtube.com"><span class="sr-only"> YouTube</span></a></li>
+            </ul>
+          </nav>
+        </div>
+        <hr class="w-100">
+        <p class="text-center copyright w-100">Carolina Spa & Salon 2018. Todos los derechos reservados</p>
+      </div>
+    </div>
+  </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
