--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse w-100" id="nav_principal">
           <ul class="nav nav-justified w-100 flex-column flex-sm-row">
             <li class="nav-item"><a href="index.html" class="nav-link text-light">Inicio</a></li>
-            <li class="nav-item"><a href="index.html" class="nav-link text-light">Nosotros</a></li>
+            <li class="nav-item"><a href="nosotros.html" class="nav-link text-light">Nosotros</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link text-light">Servicios</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link text-light">Productos</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link text-light">Contacto</a></li>
