--- a/servicios.html
+++ b/servicios.html
@@ -50,103 +50,66 @@
   <div class="container pt-4">
     <div class="row no-gutters">
       <div class="col-12 hero">
-        <img src="images/nosotros.jpg" class="img-fluid">
-        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Nosotros</h2>
+        <img src="images/servicios.jpg" class="img-fluid">
+        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Servicios</h2>
       </div>
     </div>
   </div>
   <div class="container pt-4">
     <div class="row">
       <main class="col-lg-8 contenido-principal">
-        <h2 class="d-block d-md-none text-uppercase text-center">Nosotros</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere excepturi adipisci tempora corrupti deserunt? Ratione, ullam reprehenderit cum repellat quibusdam incidunt ducimus optio inventore saepe libero. Cum odio, recusandae eum placeat commodi enim itaque quasi. Repellendus pariatur voluptatibus eum, soluta vel quos dignissimos praesentium quaerat quisquam animi nulla minima doloremque quibusdam! Atque ipsum, itaque ut consectetur omnis, at ad impedit corporis, nostrum saepe eveniet. Nemo facere saepe laudantium, adipisci asperiores maiores atque sequi dicta numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa adipisci dignissimos veritatis asperiores fugiat vel reprehenderit at recusandae sint natus, quae excepturi voluptate quos quas quasi architecto laborum quia sapiente ad ex inventore neque. In eum sapiente amet eos. Non.</p>
-        <h1 class="text-center text-uppercase mt-5 cabecera-sitio"><span class="text-lowercase d-block">conoce nuestras </span>instalaciones</h1>
-        <div class="imagenes pt-4">
-          <a href="#" data-target="#imagen_1" data-toggle="modal"><img src="images/galeria_mini_01.jpg" class="img-fluid"></a>
-          <a href="#" data-target="#imagen_2" data-toggle="modal"><img src="images/galeria_mini_02.jpg" class="img-fluid"></a>
-          <a href="#" data-target="#imagen_3" data-toggle="modal"><img src="images/galeria_mini_03.jpg" class="img-fluid"></a>
-          <div class="modal fade" id="imagen_1" tabindex="-1" role="dialog" aria-labelledby="Imagen 1" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_01.jpg" class="img-fluid">
-                </div>
+        <h2 class="d-block d-md-none text-uppercase text-center">Servicios</h2>
+        <div id="servicios">
+          <div class="card">
+            <div class="card-header" id="servicio1">
+              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion1" aria-expanded="true" aria-controls="#descripcion1">Servicio 1</button></h2>
+            </div>
+            <div id="descripcion1" class="collapse show" aria-labelledby="servicio1" data-parent="#servicios">
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
               </div>
             </div>
           </div>
-          <div class="modal fade" id="imagen_2" tabindex="-1" role="dialog" aria-labelledby="Imagen 2" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_02.jpg" class="img-fluid">
-                </div>
+          <div class="card">
+            <div class="card-header" id="servicio2">
+              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion2" aria-expanded="true" aria-controls="#descripcion2">Servicio 2</button></h2>
+            </div>
+            <div id="descripcion2" class="collapse show" aria-labelledby="servicio2" data-parent="#servicios">
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
               </div>
             </div>
           </div>
-          <div class="modal fade" id="imagen_3" tabindex="-1" role="dialog" aria-labelledby="Imagen 3" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_03.jpg" class="img-fluid">
-                </div>
+          <div class="card">
+            <div class="card-header" id="servicio3">
+              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion3" aria-expanded="true" aria-controls="#descripcion3">Servicio 3</button></h2>
+            </div>
+            <div id="descripcion3" class="collapse show" aria-labelledby="servicio3" data-parent="#servicios">
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
               </div>
             </div>
           </div>
         </div>
       </main>
-      <aside class="col-lg-4 pt-4 pt-lg-0 align-self-start">
-        <div class="sidebar horario text-light">
-          <h2 class="text-center text-uppercase mt-5">Horarios</h2>
-          <p class="text-center mt-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis rerum odit est sed, aliquid, cumque placeat nam officia maiores similique iusto in, laborum! Ipsam excepturi velit fuga modi omnis cupiditate sequi atque consequuntur adipisci ad.</p>
-          <table class="table table-hover text-center mt-3">
-            <thead>
-              <tr>
-                <th class="text-center">Día</th>
-                <th class="text-center">De</th>
-                <th class="text-center">Hasta</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Lunes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Martes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Miércoles</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Jueves</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Viernes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Sábado</td>
-                <td>10:00</td>
-                <td>14:00</td>
-              </tr>
-              <tr>
-                <td>Domingo</td>
-                <td>Cerrado</td>
-                <td>Cerrado</td>
-              </tr>
-            </tbody>
-          </table>
+      <aside class="col-lg-4 pt-4 pt-lg-0">
+        <div class="sidebar p-3 text-light">
+          <h2 class="text-center text-uppercase mt-4">Nuevos clientes</h2>
+          <p class="lead text-center mt-4">Recibe 20% de descuento con este cupón</p>
+          <div class="cupon px-2 py-5 mt-5">
+            <p class="text-uppercase text-center"><span class="display-4">20% Descuento</span> <br>en todos los servicios</p>
+          </div>
         </div>
       </aside>
+    </div>
+  </div>
+  <div class="citas container-fluid text-light py-5 mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6 text-center">
+        <h3 class="text-uppercase">Realiza una cita</h3>
+        <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem placeat tempora, quaerat praesentium provident voluptatum maxime nobis distinctio, aspernatur id omnis soluta perspiciatis hic doloribus dolorem magnam illum, repellendus consequatur.</p>
+        <a href="#" class="btn btn-primary text-uppercase mt-3">Leer más</a>
+      </div>
     </div>
   </div>
   <footer class="footer-sitio pt-3 mt-5">
