Se completa la seccion de producto.html y contactos.html y se agrega la carpeta de imágenes

--- a/contacto.html
+++ b/contacto.html
@@ -51,102 +51,36 @@
     <div class="row no-gutters">
       <div class="col-12 hero">
         <img src="images/nosotros.jpg" class="img-fluid">
-        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Nosotros</h2>
+        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Contacto</h2>
       </div>
     </div>
   </div>
   <div class="container pt-4">
     <div class="row">
       <main class="col-lg-8 contenido-principal">
-        <h2 class="d-block d-md-none text-uppercase text-center">Nosotros</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere excepturi adipisci tempora corrupti deserunt? Ratione, ullam reprehenderit cum repellat quibusdam incidunt ducimus optio inventore saepe libero. Cum odio, recusandae eum placeat commodi enim itaque quasi. Repellendus pariatur voluptatibus eum, soluta vel quos dignissimos praesentium quaerat quisquam animi nulla minima doloremque quibusdam! Atque ipsum, itaque ut consectetur omnis, at ad impedit corporis, nostrum saepe eveniet. Nemo facere saepe laudantium, adipisci asperiores maiores atque sequi dicta numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa adipisci dignissimos veritatis asperiores fugiat vel reprehenderit at recusandae sint natus, quae excepturi voluptate quos quas quasi architecto laborum quia sapiente ad ex inventore neque. In eum sapiente amet eos. Non.</p>
-        <h1 class="text-center text-uppercase mt-5 cabecera-sitio"><span class="text-lowercase d-block">conoce nuestras </span>instalaciones</h1>
-        <div class="imagenes pt-4">
-          <a href="#" data-target="#imagen_1" data-toggle="modal"><img src="images/galeria_mini_01.jpg" class="img-fluid"></a>
-          <a href="#" data-target="#imagen_2" data-toggle="modal"><img src="images/galeria_mini_02.jpg" class="img-fluid"></a>
-          <a href="#" data-target="#imagen_3" data-toggle="modal"><img src="images/galeria_mini_03.jpg" class="img-fluid"></a>
-          <div class="modal fade" id="imagen_1" tabindex="-1" role="dialog" aria-labelledby="Imagen 1" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_01.jpg" class="img-fluid">
-                </div>
-              </div>
-            </div>
+        <h2 class="d-block d-md-none text-uppercase text-center">Contacto</h2>
+        <form class="p-5 mt-5 formulario-contacto needs-validation" novalidate>
+          <div class="form-group">
+            <label for="nombre">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+            <div class="invalid-feedback">El nombre es obligatorio</div>
+            <div class="valid-feedback">Correcto</div>
           </div>
-          <div class="modal fade" id="imagen_2" tabindex="-1" role="dialog" aria-labelledby="Imagen 2" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_02.jpg" class="img-fluid">
-                </div>
-              </div>
-            </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Tu correo" required>
+            <div class="invalid-feedback">El correo es obligatorio</div>
+            <div class="valid-feedback">Correcto</div>
           </div>
-          <div class="modal fade" id="imagen_3" tabindex="-1" role="dialog" aria-labelledby="Imagen 3" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <img src="images/galeria_grande_03.jpg" class="img-fluid">
-                </div>
-              </div>
-            </div>
+          <div class="form-group">
+            <label for="mensaje">Mensaje: </label>
+            <textarea id="mensaje" class="form-control" required></textarea>
+            <div class="invalid-feedback">El mensaje es obligatorio</div>
+            <div class="valid-feedback">Correcto</div>
           </div>
-        </div>
+          <input type="submit" class="btn btn-primary text-uppercase" value="Enviar">
+        </form>
       </main>
-      <aside class="col-lg-4 pt-4 pt-lg-0 align-self-start">
-        <div class="sidebar horario text-light">
-          <h2 class="text-center text-uppercase mt-5">Horarios</h2>
-          <p class="text-center mt-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis rerum odit est sed, aliquid, cumque placeat nam officia maiores similique iusto in, laborum! Ipsam excepturi velit fuga modi omnis cupiditate sequi atque consequuntur adipisci ad.</p>
-          <table class="table table-hover text-center mt-3">
-            <thead>
-              <tr>
-                <th class="text-center">Día</th>
-                <th class="text-center">De</th>
-                <th class="text-center">Hasta</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Lunes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Martes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Miércoles</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Jueves</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Viernes</td>
-                <td>09:00</td>
-                <td>19:00</td>
-              </tr>
-              <tr>
-                <td>Sábado</td>
-                <td>10:00</td>
-                <td>14:00</td>
-              </tr>
-              <tr>
-                <td>Domingo</td>
-                <td>Cerrado</td>
-                <td>Cerrado</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </aside>
     </div>
   </div>
   <footer class="footer-sitio pt-3 mt-5">
