--- a/producto.html
+++ b/producto.html
@@ -50,66 +50,26 @@
   <div class="container pt-4">
     <div class="row no-gutters">
       <div class="col-12 hero">
-        <img src="images/servicios.jpg" class="img-fluid">
-        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Servicios</h2>
+        <img src="images/producto_01.jpg" class="img-fluid">
+        <h2 class="text-uppercase d-none d-md-block py-3 px-5">Producto 1</h2>
       </div>
     </div>
   </div>
   <div class="container pt-4">
-    <div class="row">
+    <div class="row no-gutters">
       <main class="col-lg-8 contenido-principal">
-        <h2 class="d-block d-md-none text-uppercase text-center">Servicios</h2>
-        <div id="servicios">
-          <div class="card">
-            <div class="card-header" id="servicio1">
-              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion1" aria-expanded="true" aria-controls="#descripcion1">Servicio 1</button></h2>
-            </div>
-            <div id="descripcion1" class="collapse show" aria-labelledby="servicio1" data-parent="#servicios">
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="servicio2">
-              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion2" aria-expanded="true" aria-controls="#descripcion2">Servicio 2</button></h2>
-            </div>
-            <div id="descripcion2" class="collapse show" aria-labelledby="servicio2" data-parent="#servicios">
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="servicio3">
-              <h2 class="mb-0"><button class="btn btn-link text-light" data-toggle="collapse" data-target="#descripcion3" aria-expanded="true" aria-controls="#descripcion3">Servicio 3</button></h2>
-            </div>
-            <div id="descripcion3" class="collapse show" aria-labelledby="servicio3" data-parent="#servicios">
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo nam asperiores et quisquam recusandae eos adipisci numquam, nesciunt a, dignissimos voluptate ullam! Maiores assumenda quisquam consequatur facilis modi magni velit, dolorum dolores nam corporis vitae. In cum commodi consequatur, et tenetur non laudantium magni quaerat quis corrupti laboriosam molestias quasi repudiandae nihil unde autem quidem minus reiciendis vel, mollitia nostrum!</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h2 class="d-block d-md-none text-uppercase text-center">Producto 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo soluta quo, placeat deleniti nostrum delectus, aut corporis, dolorum reprehenderit iusto, aliquam culpa? Officia harum quam repellendus, nostrum. Molestiae ex, maiores placeat earum! Sequi eveniet impedit hic nulla, aliquam provident repellat laboriosam, unde quos facilis, veritatis officiis recusandae. Aut, voluptatibus officiis corporis aliquid dignissimos nihil id aperiam saepe libero eaque culpa dicta iste odio nobis ipsam accusamus molestias est amet, sequi iusto quia, laudantium dolores neque?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, debitis sint qui doloremque explicabo accusamus eius consectetur illo deleniti architecto consequuntur a enim reiciendis doloribus distinctio quo recusandae amet officiis placeat, atque. Asperiores praesentium tenetur incidunt tempora eum vero accusamus.</p>
       </main>
       <aside class="col-lg-4 pt-4 pt-lg-0">
-        <div class="sidebar p-3 text-light">
-          <h2 class="text-center text-uppercase mt-4">Nuevos clientes</h2>
-          <p class="lead text-center mt-4">Recibe 20% de descuento con este cupón</p>
-          <div class="cupon px-2 py-5 mt-5">
-            <p class="text-uppercase text-center"><span class="display-4">20% Descuento</span> <br>en todos los servicios</p>
-          </div>
+        <div class="sidebar pt-5 text-light descripcion-producto">
+          <h2 class="text-center text-uppercase mt-4">Descripción</h2>
+          <p class="text-center">Suspendisse vehicula bibendum blandit. Curabitur laoreet malesuada.</p>
+          <h3 class="text-uppercase text-center mt-5">Precio</h3>
+          <p class="display-4 text-center">$25.00</p>
         </div>
       </aside>
-    </div>
-  </div>
-  <div class="citas container-fluid text-light py-5 mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-8 col-lg-6 text-center">
-        <h3 class="text-uppercase">Realiza una cita</h3>
-        <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem placeat tempora, quaerat praesentium provident voluptatum maxime nobis distinctio, aspernatur id omnis soluta perspiciatis hic doloribus dolorem magnam illum, repellendus consequatur.</p>
-        <a href="#" class="btn btn-primary text-uppercase mt-3">Leer más</a>
-      </div>
     </div>
   </div>
   <footer class="footer-sitio pt-3 mt-5">
