--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <li class="nav-item"><a href="index.html" class="nav-link text-light">Inicio</a></li>
             <li class="nav-item"><a href="nosotros.html" class="nav-link text-light">Nosotros</a></li>
             <li class="nav-item"><a href="servicios.html" class="nav-link text-light">Servicios</a></li>
-            <li class="nav-item"><a href="index.html" class="nav-link text-light">Productos</a></li>
-            <li class="nav-item"><a href="index.html" class="nav-link text-light">Contacto</a></li>
+            <li class="nav-item"><a href="productos.html" class="nav-link text-light">Productos</a></li>
+            <li class="nav-item"><a href="contacto.html" class="nav-link text-light">Contacto</a></li>
           </ul>
         </div>
       </div>
